--- a/css/recettes.css
+++ b/css/recettes.css
@@ -29,6 +29,12 @@ p { font-weight: 200; font-size: 16px;} */
 
 .container__info-recette{
     width: 100%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+.info-recette {
     margin: auto;
 }
 .bread-crumbs {
@@ -172,19 +178,20 @@ p2 {
 
 .section-ingredient {
     display: grid;
-    gap: 10px;
+    gap: 15px;
 }
 
 
 
-.section-ingredient-container{
-    margin-bottom: 10px; /* Espace entre les lignes */
-}
+
 
 .titre-section-container {
     display: flex;
     align-items: center; /* Centre verticalement les éléments */
     padding: 0 15px 0 15px;
+}
+.ingredients .titre-section-container svg {
+    cursor: pointer;
 }
 
 .titre-section-image {
@@ -305,13 +312,8 @@ ul {
     gap: 5px;
     margin-inline: 10px;
 }
-
-.portion-control__value_container {
+.portion-control__value {
     display: flex;
-    align-items: center; /* Centre verticalement la valeur */
-    justify-content: flex-end; /* Aligne le contenu à droite */
-    gap: 5px;
-    margin-inline: 10px;
 }
 
 .portion-control__value_number {
@@ -338,6 +340,24 @@ input[type="text"] {
     appearance: textfield; /* Chrome */
 }
 
+
+.bouton-reset__portion {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    padding-top: 12px;
+    transition: transform 0.2s ease;
+}
+.bouton-reset__portion svg{
+    fill:rgb(63, 55, 53);
+}
+.bouton-reset__portion:hover {
+    transform: scale(1.2); /* Agrandissement lors du survol */
+}
+.bouton-reset__portion:hover svg{
+    fill:#CB6863;
+}
+
 /* Masquer les flèches pour les inputs */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
@@ -354,9 +374,6 @@ input {
 
 /* Champ d'entrée */
 #portion-input {
-    width: 35px;
-    text-align: center;
-    border: none;
     background-color: transparent;
     font-weight: bold;
     font-size: 15px;
@@ -369,6 +386,7 @@ input {
     font-size: 1em;
     font-family: 'Caviar Dreams', sans-serif; 
     color: #CB6863;
+    padding-left: 8px;
 }
 
 
@@ -387,6 +405,15 @@ input {
     font-style: normal; 
 }
 
+.quantite-control__value_number {
+    font-weight: 400;
+    font-size: 18px;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #1B1B1B;
+    font-style: normal;
+
+}
+
 .highlight {
     background-color: #F6E2DF; /* ou une autre couleur de votre choix */
     transition: background-color 0.3s ease;
@@ -401,6 +428,29 @@ input {
 .card-ingredient {
     overflow: hidden;
     transition: transform 0.3s;
+}
+
+.list-view {
+    display: block;
+}
+
+.list-view .card-ingredient {
+    width: 100%;
+    height: 90px;
+    display: inline-flex;
+    align-items: center;
+}
+.list-view .card-ingredient-image {
+    width: 75px;
+}
+.list-view .recette_ingredients-details {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: unset;
+    text-align: unset;
+}
+.list-view .recette_ingredients-qtunit {
+    display: unset;
 }
 
 .card-ingredient:hover {
