--- a/css/recettes.css
+++ b/css/recettes.css
@@ -336,8 +336,11 @@ ul {
 }
 
 input[type="text"] {
-    -moz-appearance: textfield; /* Firefox */
-    appearance: textfield; /* Chrome */
+    -moz-appearance: textfield;    /* Firefox */
+    -webkit-appearance: textfield; /* Safari et Chrome */
+    appearance: textfield;         /* Navigateurs modernes */
+    padding: 0;
+    margin: 0;
 }
 
 
@@ -404,6 +407,9 @@ input {
     font-weight: 400;
     font-style: normal; 
 }
+.highlight-quantity span {
+    line-height: none;
+}
 
 .quantite-control__value_number {
     font-weight: 400;
@@ -448,6 +454,7 @@ input {
     flex-direction: row;
     align-items: unset;
     text-align: unset;
+    width: 80%;
 }
 .list-view .recette_ingredients-qtunit {
     display: unset;
