--- a/css/recettes.css
+++ b/css/recettes.css
@@ -366,12 +366,16 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 input {
     -webkit-appearance: none; /* Chrome, Safari */
     -moz-appearance: textfield; /* Firefox */
     appearance: none; /* Pour tous les navigateurs */
+    padding: 0;
+    margin: 0;
 }
 
 
