--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding-top: 80px;
+    -webkit-font-smoothing: antialiased; /* Rend la police plus fine et précise */
+    text-rendering: optimizeLegibility; /* Peut améliorer la lisibilité des textes avec ligatures */
 }
 
 
@@ -231,20 +233,21 @@ body {
 h1 { 
     font-weight: 500; 
     font-size: 3em;
+    letter-spacing : 0em;
     font-family: 'Gold Leaf', sans-serif;
     color: #1B1B1B;
-    letter-spacing: 0.05cap;
  }
 h2 { 
     font-weight: 500;
      font-size: 1.8em;
+     letter-spacing: -0.05em;
      font-family: 'Montserrat', sans-serif;
      color: #1B1B1B;  
 }
 h3 { 
     font-weight: 500; 
     font-size: 1.4em;
-    letter-spacing: 0.05em;
+    letter-spacing: 0em;
     font-family: 'Montserrat', sans-serif;
     color: #1B1B1B;  
 }
@@ -279,18 +282,19 @@ h7 {
 
 p { 
     font-size: 1.2em; 
+    line-height: ;
     font-weight: 300;
     font-family: 'Source Sans Pro', sans-serif;
     color: #1B1B1B; 
 }
 p2 {
-    font-size: 1em; 
+    font-size: 1.1em; 
     font-weight: 300;
     font-family: 'Source Sans Pro', sans-serif;
     color: #1B1B1B; 
     font-style: italic;
     letter-spacing: 0.1cap;
-    line-height: 2cap;
+    line-height: 1.57em;
 }
 
 
