modication path dans header

--- a/components/header.html
+++ b/components/header.html
@@ -3,14 +3,14 @@
     <div class="container">
         <div class="header__logo">
             <div class="user-logo">
-                <a href="/Orpps/recettes.html" id="userLogoLink">
-                    <img src="/Orpps/assets/images/logos_orpps/user_logo_hat.png" alt="User Logo Hat" class="user-logo__hat">
-                    <img src="/Orpps/assets/images/logos_orpps/user_logo_mustache.png" alt="User Logo Mustache" class="user-logo__mustache">
+                <a href="/recettes.html" id="userLogoLink">
+                    <img src="/assets/images/logos_orpps/user_logo_hat.png" alt="User Logo Hat" class="user-logo__hat">
+                    <img src="/assets/images/logos_orpps/user_logo_mustache.png" alt="User Logo Mustache" class="user-logo__mustache">
                 </a>
             </div>
             <div class="orpps-logo">
-                <a href="/Orpps/index.html">
-                    <img src="/Orpps/assets/images/logos_orpps/orpps_logo.png" alt="Orpps Logo">
+                <a href="/index.html">
+                    <img src="/assets/images/logos_orpps/orpps_logo.png" alt="Orpps Logo">
                 </a>
             </div>
         </div>
@@ -25,7 +25,7 @@
         <div class="header__nav">
             <ul>
                 <li>
-                    <a href="/Orpps/recettes/Magret de canard (sauce au miel et thym)/index.html">
+                    <a href="/recettes/Magret de canard (sauce au miel et thym)/index.html">
                         <svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="header__nav__svg-icon" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/Orpps/planification_de_menu.html">
+                    <a href="/planification_de_menu.html">
                         <svg class="header__nav__svg-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/Orpps/liste_de_course.html">
+                    <a href="/liste_de_course.html">
                         <svg class="header__nav__svg-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" id="bag-alt-1" class="icon glyph" fill="#000000">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
