--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,7 @@ h7 {
 
 p { 
     font-size: 1.2em; 
-    line-height: ;
+    line-height: 1.5em;
     font-weight: 300;
     font-family: 'Source Sans Pro', sans-serif;
     color: #1B1B1B; 
@@ -357,8 +357,8 @@ p2 {
 /* --- Header Styles --- */
 .header {
     display: flex;
-    flex-direction: column; /* Changer pour une colonne */
-    align-items: center; /* Centre le contenu horizontalement */
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     padding: 15px 20px;
     background-color: #ffffff;
@@ -368,20 +368,21 @@ p2 {
     left: 0;
     width: 100%;
     z-index: 1000;
-    margin: 0 auto;
     box-sizing: border-box;
 }
 
 
 /* Container qui limite la largeur du contenu interne */
-.header .container {
+.header__container {
+    display: flex; /* Utilise flexbox pour organiser les enfants du container */
+    align-items: center; /* Centre les enfants verticalement */
+    justify-content: space-between; /* Répartit les éléments (logo à gauche, burger menu à droite) */
     max-width: var(--page-max-width);
-    width: 100%; /* S'assure que le container prend 100% de l'espace disponible */
+    width: 100%;
     margin: 0 auto;
     padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    box-sizing: border-box;
+    z-index: 1000; /* Pour s'assurer que le header est au-dessus de l'overlay */
 }
 
 .container {
@@ -532,105 +533,114 @@ p2 {
     transform: rotate(45deg);
 }
 
-.header.modal-burger-open .header__overlay {
-    display: flex; /* Affiche l'overlay quand le menu est ouvert */
-}
 
 
-/* Styles pour le menu lorsqu'il est actif */
-#overlayMenu {
-    display: none; /* Masquer le menu par défaut */
-    position: relative; /* Position absolue par rapport à son parent (header) */
-    top: 100%; /* Positionné juste en dessous du header */
-    left: 0;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 1); /* Fond blanc pour le menu */
-    z-index: 999; /* Assurer que le menu est au-dessus du contenu */
-}
-
-/* Styles pour le menu lorsqu'il est actif */
-#overlayMenu.active {
-    display: block; /* Afficher le menu lorsque actif */
-}
 
 
 
 
 
 /* --- Styles pour le menu --- */
-.header__nav {
-    display: none; /* Masquer par défaut */
-    flex-direction: column; /* Disposer les éléments verticalement */
-    padding: 15px; /* Espacement interne */
-    background-color: rgba(255, 255, 255, 1); /* Fond blanc */
-    max-width: var(--page-max-width);
-    margin: 0 auto;
+
+.header__nav h3 {
+    text-align: center;
+}
+.Menu_categorie {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
-.header__nav ul {
-    list-style: none; /* Pas de puces */
-    padding: 0; /* Pas de padding par défaut */
-}
-
-.header__nav li {
-    margin: 10px 0; /* Espacement entre les éléments de la liste */
-}
-
-.header__nav a {
-    text-decoration: none; /* Pas de soulignement */
-    color: #333; /* Couleur du texte */
-    font-weight: bold; /* Gras */
-    font-size: 18px; /* Taille de police */
-    transition: color 0.3s ease, fill 0.3s ease, transform 3s ease; /* Transition pour la couleur */
-}
-
-/* Changement de couleur au survol */
-.header__nav a:hover {
-    color: #CB6863; /* Changez cette couleur selon vos préférences */
-}
-.header__nav a:hover svg {
-    fill: #CB6863;
-    transform: scale(1.33);
-}
-
-/* Afficher le menu mobile lorsque actif */
-#overlayMenu.active .header__nav {
-    display: flex; /* Afficher le menu lorsque actif */
-}
 
 /* --- Agrandissement du header --- */
 .header.expanded {
     height: auto; /* Permet au header de s'agrandir automatiquement */
 }
 
+
+
+
 .header__overlay {
-    position: fixed;
-    top: 0; /* Commence en haut */
+    position: absolute;
+    top: 100%;
     left: 0;
-    right: 0;
-    height: 100%; /* Prend toute la hauteur */
-    background-color: rgba(0, 0, 0, 0.7); /* Couleur d'arrière-plan avec transparence */
-    transform: translateY(-100%); /* Masquer l'overlay hors de la vue */
-    transition: transform 0.3s ease, opacity 0.3s ease; /* Transition pour l'animation */
-    opacity: 0; /* Masquer par défaut */
-    pointer-events: none; /* Empêche les clics lorsque masqué */
+    width: 100%;
+    z-index: 999;
+
+    transform: translateY(-100%); /* Commence au-dessus du container */
+    transition: transform 0.5s ease-in-out; /* Animation douce de glissement */
+
+}
+.header__overlay.active {
+    transform: translateY(0);
+
 }
 
-/* Afficher l'overlay lorsque actif */
+
+/* --- Styles pour le menu overlay qui s'affiche sous le header --- */
+#overlayMenu {
+    position: fixed; /* Positionné pour occuper toute la largeur en dessous du header */
+    top: 80px; /* Correspond à la hauteur du header */
+    left: 0;
+    width: 100%;
+    z-index: 998; /* S'assurer que c'est juste sous le header */
+    transform: translateY(-100%); /* Commence en dehors de l'écran */
+    visibility: hidden; /* Masque le menu quand il n'est pas actif */
+    transition: transform 0.5s ease-in-out, visibility 0.5s; /* Transition douce */
+}
+
+/* --- Styles pour le menu lorsqu'il est actif (affiché) --- */
 #overlayMenu.active {
-    transform: translateY(0); /* Glisse dans la vue */
-    opacity: 1; /* Rendre visible */
-    pointer-events: auto; /* Activer les événements de clic */
+    transform: translateY(0); /* Descend à sa position normale */
+    visibility: visible; /* Permet d'afficher l'élément */
+}
+
+/* Contenu interne de l'overlay */
+.overlay-content {
+    position: relative;
+    width: 100%;
+}
+.header__overlay.active .overlay-content {
+    transform: translateY(0); /* Descend à sa position normale */
 }
 
 
-/* ajout d'un class pour les SVG du header nav */
-.header__nav__svg-icon {
-    width: 20px; /* Largeur de l'icône */
-    height: 20px; /* Hauteur de l'icône */
-    margin-right: 10px; /* Marge à droite pour espacer le texte */
-    fill: #000; /* Couleur de remplissage par défaut */
+
+/* --- Header navigation styles --- */
+.header__nav {
+    padding: 50px 15px 100px 15px ; /* Espacement interne */
+    background-color: rgba(255, 255, 255, 0.8); /* Fond blanc tranparent*/
+    backdrop-filter: blur(25px); /* Applique un flou à l'arrière-plan */
+    align-items: center;
+    justify-content: center;
+    display: flex; /* Afficher le menu */
+    flex-direction: column; /* Disposer les éléments verticalement */
+    opacity: 0; /* Début transparent */
+    transform: translateY(-20%);
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out; /* Transition douce de descente et d'opacité */
+
 }
+
+/* Quand le menu est actif, rendre visible la navigation */
+#overlayMenu.active .header__nav {
+    transform: translateY(0);
+    opacity: 1; /* Devient visible */
+}
+
+
+
+/* --- Styles pour le menu burger lorsqu'il est actif --- */
+.header.modal-burger-open .header__overlay {
+    display: block;
+    height: auto; /* Assurez que l'overlay a la hauteur nécessaire pour son contenu */
+    pointer-events: auto;
+    z-index: 999;
+}
+
+
 
 
 
@@ -650,9 +660,9 @@ p2 {
         display: flex; /* Afficher le burger */
     }
 
-    .header__overlay {
-        display: flex; /* Afficher l'overlay */
-    }
+   
+
+
 } 
 
 /* Afficherafficher la navigation normale sur les écrans plus larges */
@@ -661,7 +671,5 @@ p2 {
         display: flex; /* Masquer le burger menu */
     }
 
-    .header__overlay {
-        display: flex; /* Afficher l'overlay */
-    }
+
 }
