suppression shadow header quand menu actif

--- a/components/header.html
+++ b/components/header.html
@@ -26,7 +26,7 @@
    <div id="overlayMenu" class="header__overlay">
         <div class="overlay-content">
             <div class="header__nav">
-                <h3>Que souhaitez-vous cuisiner ?</h3>
+                <h3>Que souhaitez-vous faire ?</h3>
                 <div class="Menu_categorie"></div>
             </div>
         </div>
