--- a/css/style.css
+++ b/css/style.css
@@ -665,13 +665,14 @@ p2 {
     .header__nav {
         position: relative; /* Assurez-vous que la navigation est en dessous du header */
         height: calc(100vh - 20px); /* Ajustez 80px à la hauteur réelle de votre header */
-        padding: 0 15px; 
+        padding: 15px 15px 0 15px; 
+        justify-content: unset;
     }
 
     .header__burger {
-        display: flex; /* Afficher le burger */
+        display: flex; /* Afficher le burger */ 
     }  
-
+ 
 
 
 } 
