--- a/components/header.html
+++ b/components/header.html
@@ -29,7 +29,15 @@
         <div class="header__nav">
             <div id="headerSearchBar" class="header__search-bar">
             </div>
-            <div class="Menu_categorie"></div>
+            <div class="Menu_categorie">
+                <secondary-button text="Entrée" href="/recettes?categorie=Entr%C3%A9e"></secondary-button>
+                <secondary-button text="Tapas" href="/recettes?categorie=Tapas"></secondary-button>
+                <secondary-button text="Plat" href="/recettes?categorie=Plat"></secondary-button>
+                <secondary-button text="Dessert" href="/recettes?categorie=Dessert"></secondary-button>
+                <secondary-button text="Apéritif" href="/recettes?categorie=Ap%C3%A9ritif"></secondary-button>
+                <secondary-button text="Boulangerie" href="/recettes?categorie=Boulangerie"></secondary-button>
+                <secondary-button text="Boisson" href="/recettes?categorie=Boisson"></secondary-button>
+            </div>
         </div>
     </div>
 </div>    
