--- a/css/recette-details.css
+++ b/css/recette-details.css
@@ -564,13 +564,19 @@ html {
     text-align: center;
     padding: 10px;
     max-width: 100%; /* Assure que l'image ne dépasse pas la largeur de son conteneur */
+    aspect-ratio: 1/1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-ingredient-image img {
     border: 1px solid #ccc;
     border-radius: 8px;
-    max-width: 100%; /* Permet à l'image de s'ajuster à la largeur de son conteneur */
-    height: auto; /* Conserve le ratio d'aspect de l'image */
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
 }
 
 .recette_ingredients-details {
