--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,7 @@
     <div class="header__container">
         <div class="header__logo">
             <div class="user-logo">
-                <a href="/recettes.html" id="userLogoLink">
+                <a href="/recettes" id="userLogoLink">
                     <img src="/assets/images/logos_orpps/user_logo_hat.png" alt="User Logo Hat" class="user-logo__hat">
                     <img src="/assets/images/logos_orpps/user_logo_mustache.png" alt="User Logo Mustache" class="user-logo__mustache">
                 </a>
