--- a/css/recettes.css
+++ b/css/recettes.css
@@ -1,7 +1,7 @@
 .recettes-list{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
-    gap: 15px;
+    gap: 25px;
     margin-top: 50px;
 
 }
@@ -20,7 +20,10 @@
     padding: 15px;
     cursor: pointer;
     border-radius: 20px;
-    background-color: #FBFBFB;
+    background-color: #f5f5f5;
+    position: relative;
+    z-index: 1;
+    transition: box-shadow 0.3s ease; /* Ajout de la transition */
 }
 
 .recette-item .subCategories {
@@ -86,10 +89,11 @@
     border-radius: 8px;
     overflow: hidden;
     position: relative; 
+    z-index: 1;
 }
 
 .recette-item:hover {
-    box-shadow: 0px 40px 80px rgba(0, 0, 0, 0.05) ;
+    box-shadow: 0px 30px 60px rgba(0, 0, 0, 0.1) ;
 }
 
 
