changement de design et fonctionnalité de filtrage des recettes

--- a/css/styles.css
+++ b/css/styles.css
@@ -533,10 +533,10 @@ p2 {
     transform: rotate(45deg);
 }
 
-.Menu_categorie secondary-button {
+/* .Menu_categorie secondary-button {
     display: none;
     opacity: 0;
-}
+} */
 
 
 
