--- a/css/recettes.css
+++ b/css/recettes.css
@@ -6,12 +6,114 @@
 
 }
 
+
+.categories{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 5px;
+    margin: 15px 0;
+    align-items: center;
+}
+.category {
+    padding: 3px 0;
+    cursor: pointer;
+}
+.category h6 {
+    color: #a3a3a3;
+}
+.category:hover h6{
+    color: #CB6863;
+    text-decoration: underline;
+}
+.category.active {
+    padding: 3px 10px;
+    backdrop-filter: blur(2px);
+    border-radius: 8px;
+    background-color: rgba(27, 27, 27, 0.5);
+}
+.category.active h6 {
+    color: #FFFFFF;
+    font-weight: 400;
+    text-decoration: unset;
+}
+
+
+
+
+
+
+.recettes__search-bar{
+    display: flex;
+    justify-content: left;
+}
+.recettes__search-content{
+    display: flex; 
+    align-items: center; 
+    border: 1px solid rgba(63, 55, 53, 0.23); 
+    border-radius: 50px; padding: 
+    5px 10px; 
+    width: 100%;
+    min-width: 300px;
+    max-width: 600px; 
+    opacity: 1; 
+    transition: width 0.9s, opacity 0.3s;
+}
+
+
+
+
+h1{
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+
+
+
 .subCategories {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px; /* Espacement entre les boutons */
+    column-gap: 10px; 
+    row-gap: 5px;
+    margin: 15px;
 }
+.subCategory h7 {
+    color: #696969;
+    font-size: 0.7em;
+}
+.subCategory {
+    padding: 3px 10px;
+    backdrop-filter: blur(2px);
+    border-radius: 8px;
+    outline: 1px solid #696969;
+    outline-offset: -1px;
+}
+
+#subCategories .subCategory {
+    cursor: pointer;
+}
+#subCategories .subCategory:hover {
+    outline: 1px solid #CB6863;
+}
+#subCategories .subCategory:hover h7{
+    color: #CB6863;
+}
+#subCategories .subCategory.active {
+    border: none;
+    background-color: rgba(27, 27, 27, 0.5);
+    outline: unset;
+}
+
+#subCategories .subCategory.active h7{
+    color: #FFFFFF;
+}
+
+
+
+
+
 
 .recette-item {
     display: flex;
@@ -26,63 +128,6 @@
     transition: box-shadow 0.3s ease; /* Ajout de la transition */
 }
 
-.recette-item .subCategories {
-    position: absolute;
-    top: 0; /* Ajustez selon l’espace que vous souhaitez en haut */
-    left: 0; /* Ajustez selon l’espace que vous souhaitez à droite */
-    display: flex;
-    gap: 10px; /* Espacement entre les boutons */
-    padding-top: 5px;
-    padding-left: 5px;
-    z-index: 2;
-}
-
-.subCategory {
-    padding: 3px 10px;
-    backdrop-filter: blur(2px);
-    border-radius: 8px;
-    outline: 1px solid #696969;
-    outline-offset: -1px;
-}
-
-#subCategories .subCategory {
-    cursor: pointer;
-}
-
-#subCategories .subCategory:hover {
-    outline: 1px solid #CB6863;
-}
-
-#subCategories .subCategory:hover h7{
-    color: #CB6863;
-}
-
-#subCategories .subCategory.active {
-    border: none;
-    background-color: rgba(27, 27, 27, 0.5);
-    outline: unset;
-}
-
-#subCategories .subCategory.active h7{
-    color: #FFFFFF;
-}
-
-.recette-item .subCategory {
-    background-color: rgba(27, 27, 27, 0.5);
-    backdrop-filter: blur(2px);
-
-}
-
-.subCategory h7 {
-    color: #696969;
-    font-size: 0.7em;
-}
-
-.recette-item .subCategory h7 {
-    color: #FFFFFF;
-
-}
-
 .recette-item__container_img {
     width: 100%;
     aspect-ratio: 21 / 9; 
@@ -91,13 +136,6 @@
     position: relative; 
     z-index: 1;
 }
-
-.recette-item:hover {
-    box-shadow: 0px 30px 60px rgba(0, 0, 0, 0.1) ;
-}
-
-
-
 .recette-image {
     height: 100%;
     width: 100%;
@@ -110,6 +148,35 @@
 .recette-item:hover .recette-image {
     transform: scale(1.2); /* Zoom de l'image */
 }
+
+
+.recette-item .subCategories {
+    position: absolute;
+    bottom: 10px; /* Ajustez selon l’espace que vous souhaitez en haut */
+    left: 5px; /* Ajustez selon l’espace que vous souhaitez à droite */
+    display: flex;
+    gap: 10px; 
+    padding-top: 5px;
+    padding-left: 5px;
+    z-index: 2;
+    margin: 0;
+}
+.recette-item .subCategory {
+    background-color: rgba(27, 27, 27, 0.5);
+    backdrop-filter: blur(2px);
+}
+.recette-item .subCategory h7 {
+    color: #FFFFFF;
+
+}
+
+.recette-item:hover {
+    box-shadow: 0px 30px 60px rgba(0, 0, 0, 0.1) ;
+}
+
+
+
+
 
 
 
